Fix random flakiness in chat view where showing the chat box and pressing backspace would sometimes put the chat box in a state where no typed text would be visible. The keyboard event handling model is much more robust now. Also use the display: CSS property so that the chat box doesn't always take up a line of space.

--- a/css/main.css
+++ b/css/main.css
@@ -180,11 +180,11 @@ body {
   border: none;
   width: 80%;
   outline: none;
-  opacity: 0;
+  display: none;
 }
 
 .cv-visible {
-  opacity: 1;
+  display: block;
 }
 
 /**************************************
